[package]
name = "simple-pool"
version = "0.0.3"
edition = "2018"
authors = ["Sergei S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/simple-pool"
description = "Simple async pool for any kind of resources"
readme = "README.md"
keywords = ["pool", "async", "resource"]

[dependencies]

[dev-dependencies]
tokio = { version = "1.9.0", features = ["net", "sync", "rt"] }
