[package]
name = "simple-pool"
version = "0.0.18"
edition = "2018"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/simple-pool"
description = "Simple async pool for any kind of resources"
readme = "README.md"
keywords = ["pool", "async", "resource"]

[dev-dependencies]
tokio = { version = "1.9.0", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }

[dependencies]
object-id = "0.1.3"
parking_lot = "0.12.1"
